src/main/java/com/errors/test_errors_list/dto/UserDto.java
package com.errors.test_errors_list.dto;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
@AllArgsConstructor
public class UserDto {

    private String name;
    private String email;

}
